# Hook

./: .gitignore  CMakeLists.txt  Makefile  README.md  swagger_api.json
include/: config.in  mongoose.h  mp3_helper.h  utils.h
songs/: songs.json
src/: Hook.c  Hook.cpp  mongoose.c  mp3_helper.c  mp3_helper.cpp  mp3_helper.h  music.json  utils.c  utils.cpp  utils.h
